frontend and google auth first try
